load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

licenses(["notice"])

package(default_visibility = ["//examples:__subpackages__"])

proto_library(
    name = "payment_proto",
    srcs = [
        "payment.proto"
    ],
)

java_proto_library(
    name = "payment_java_proto",
    deps = [":payment_proto"],
)

kt_jvm_proto_library(
    name = "payment_kt_proto",
    deps = [":payment_proto"],
)

kt_jvm_grpc_library(
    name = "payment_kt_grpc",
    srcs = [":payment_proto"],
    deps = [":payment_java_proto"],
)
