load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

licenses(["notice"])

package(default_visibility = ["//examples:__subpackages__"])

proto_library(
    name = "pricing_proto",
    srcs = [
        "pricing.proto"
    ],
)

java_proto_library(
    name = "pricing_java_proto",
    deps = [":pricing_proto"],
)

kt_jvm_proto_library(
    name = "pricing_kt_proto",
    deps = [":pricing_proto"],
)

kt_jvm_grpc_library(
    name = "pricing_kt_grpc",
    srcs = [":pricing_proto"],
    deps = [":pricing_java_proto"],
)
