load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

licenses(["notice"])

package(default_visibility = ["//examples/src:__subpackages__"])

kt_jvm_binary(
    name = "payment_server",
    srcs = ["PaymentServer.kt"],
    main_class = "payment.server.PaymentServerKt",
    deps = [
        "//examples/protos/src/main/proto/payment:payment_kt_grpc",
        "//examples/protos/src/main/proto/payment:payment_kt_proto",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//netty",
    ],
)
